[project]
name = "zyndai-agent"
version = "0.4.1"
description = "A multi-framework AI agent SDK for the Zynd AI Network. Supports LangChain, LangGraph, CrewAI, PydanticAI, and custom agents with a unified invoke() interface. Provides Ed25519 Identity, Agent Discovery via agent-dns, HTTP Webhook Communication, Agent Cards, and x402 Micropayments."
authors = [
    { name = "Swapnil Shinde", email = "swapnilshinde9382@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base58>=2.1.1",
    "cryptography>=46.0.5",
    "eth-account>=0.13.7",
    "flask>=3.1.3",
    "langchain>=1.2.10",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "x402[evm,flask,requests]>=2.1.0",
]

[project.optional-dependencies]
ngrok = [
    "pyngrok>=7.0.0",
]
mqtt = [
    "paho-mqtt>=2.1.0",
]
heartbeat = [
    "websockets>=14.0",
]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zyndai_agent"]
